--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,18 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+.box-container{
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
+  gap: 1.5rem;
 }
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.box-container .box{
+ padding: 3rem 2rem;
+ background: #fff;
+ outline: .1rem solid rgba(0, 0, 0, 0.1);
+ outline-offset: -1rem;
+ text-align: center;
+ box-shadow: 0 .5rem 1.5  rgba(0, 0, 0, 0.1)
+}
+.box-container .box img{
+  margin: 1rem 0;
+  width: 20rem;
+  height: 25rem;
 }
